# vr_streaming

player/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp  peer_management.cpp  peer_management.hpp
player/player/: CMakeLists.txt  cmake_install.cmake  main  main.cpp  peer_management.cpp  udp.c  udp.h
video_server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
video_server/video_server/: main.cpp
video_server_backup/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
